chore: deploy version and latest docker tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,12 @@ jobs:
       script:
         - npm run build
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
-        - docker build -t $DOCKER_USER/image-processor:$TRAVIS_COMMIT .
+        - docker build -t $DOCKER_USER/image-processor:$TRAVIS_COMMIT -t $DOCKER_USER/image-processor:latest -t $DOCKER_USER/image-processor:$TRAVIS_BRANCH .
         - docker push $DOCKER_USER/image-processor:$TRAVIS_COMMIT
+      deploy:
+        provider: script
+        skip_cleanup: true
+        cleanup: false
+        script: docker push $DOCKER_USER/image-procesor:latest && docker push $DOCKER_USER/image-processor:$TRAVIS_BRANCH
+        on:
+          branch: master
